# torchcodec

./: .gitignore  .pre-commit-config.yaml  API_breakdown_claude_plan.md  CMakeLists.txt  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  setup.py  torchcodec-versions.json  versions.html
0.10.0/: api_ref_decoders.html  api_ref_encoders.html  api_ref_samplers.html  api_ref_torchcodec.html  api_ref_transforms.html  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  sitemap.xml
0.11.0/: api_ref.html  api_ref_decoders.html  api_ref_encoders.html  api_ref_samplers.html  api_ref_torchcodec.html  api_ref_transforms.html  genindex.html  glossary.html  index.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
0.12.0/: api_ref.html  api_ref.md  api_ref_decoders.html  api_ref_decoders.md  api_ref_encoders.html  api_ref_encoders.md  api_ref_samplers.html  api_ref_torchcodec.html  api_ref_transforms.html  api_ref_transforms.md  genindex.html  glossary.html  index.html  llms-full.txt  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  sg_execution_times.md
0.13.0/: api_ref.html  api_ref_decoders.html  api_ref_encoders.html  api_ref_samplers.html  api_ref_torchcodec.html  api_ref_transforms.html  genindex.html  glossary.html  index.html  index.md  llms-full.txt  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  sg_execution_times.md
0.14.0/: api_ref.html  api_ref_decoders.html  api_ref_encoders.html  api_ref_samplers.html  api_ref_torchcodec.html  api_ref_transforms.html  genindex.html  glossary.html  index.html  llms-full.txt  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  sg_execution_times.md  sitemap.xml
0.15.0/: api_ref.html  api_ref_decoders.html  api_ref_encoders.html  api_ref_samplers.html  api_ref_torchcodec.html  api_ref_transforms.html  genindex.html  glossary.html  index.html  index.md  llms-full.txt  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  sg_execution_times.md  sitemap.xml
0.2.0/: api_ref_decoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  search.html  sg_execution_times.html
0.3.0/: api_ref_decoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  search.html  sg_execution_times.html
0.4.0/: api_ref_decoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  (+3 more)
src/torchcodec/_core/: AVIOContextHolder.cpp  AVIOContextHolder.h  AVIOFileContext.cpp  AVIOFileContext.h  AVIOFileLikeContext.cpp  AVIOFileLikeContext.h  AVIOTensorContext.cpp  AVIOTensorContext.h  BetaCudaDeviceInterface.cpp  BetaCudaDeviceInterface.h  CMakeLists.txt  CUDACommon.cpp  CUDACommon.h  CUDAStreamHook.h  Cache.h  ColorConverter.cpp  ColorConverter.h  CpuDeviceInterface.cpp  CpuDeviceInterface.h  CudaDeviceInterface.cpp  CudaDeviceInterface.h  DecodeAvif.cpp  DecodeAvif.h  DecodeGif.cpp  DecodeGif.h  DecodeHeic.cpp  DecodeHeic.h  DecodeJpeg.cpp  DecodeJpeg.h  DecodeJpegCuda.cpp  DecodeJpegCuda.h  DecodePng.cpp  DecodePng.h  DecodeWebp.cpp  DecodeWebp.h  Demuxer.cpp  Demuxer.h  DeviceInterface.cpp  DeviceInterface.h  Encoder.cpp  (+84 more)
test/: CMakeLists.txt  MetadataTest.cpp  TCTensorTest.cpp  TCTorchBackendTest.cpp  TestStableABIConversions.h  VideoDecoderTest.cpp  conftest.py  generate_reference_resources.py  smoke_test.py  smoke_test_no_torch.py  smoke_test_no_torch_cuda.py  smoke_test_no_torch_package.py  test_autoload.py  test_bridge.py  test_cppapi.py  test_decoders.py  test_encoders.py  test_ffmpeg_optional.py  test_frame_dataclasses.py  test_logging.py  test_metadata.py  test_ops.py  test_plugins.py  test_samplers.py  test_transform_ops.py  test_video_clip_sampler.py  utils.py
test/cppapi/: CMakeLists.txt  CppApiTest.cpp  test_cppapi.py
test/plugin/: pyproject.toml  test_plugins.py
test/plugin/dummy_plugin/: __init__.py
test/plugin/torchcodec_test_plugin/: __init__.py
test/resources/: gradient.avif  gradient.heic  gradient_10bit.avif  gradient_10bit.heic  gradient_12bit.avif  nasa_13013.mp4.crop=300:200:50:35:exact=1.stream3.frame000000.pt  nasa_13013.mp4.crop=300:200:50:35:exact=1.stream3.frame000015.pt  nasa_13013.mp4.crop=300:200:50:35:exact=1.stream3.frame000200.pt  nasa_13013.mp4.crop=300:200:50:35:exact=1.stream3.frame000389.pt  nasa_13013.mp4.crop_300_200_50_35_exact_1.stream3.frame000000.pt  nasa_13013.mp4.crop_300_200_50_35_exact_1.stream3.frame000015.pt  nasa_13013.mp4.crop_300_200_50_35_exact_1.stream3.frame000200.pt  nasa_13013.mp4.crop_300_200_50_35_exact_1.stream3.frame000389.pt  nasa_13013.mp4.scale_240_135_flags_bilinear.stream3.frame000017.pt  nasa_13013.mp4.scale_240_135_flags_bilinear.stream3.frame000230.pt  nasa_13013.mp4.scale_240_135_flags_bilinear.stream3.frame000389.pt  nasa_13013.mp4.stream3.frame000000.rgb48.pt  nasa_13013.mp4.stream3.frame000005.rgb48.pt  nasa_13013.mp4.stream3.frame000010.pt  nasa_13013.mp4.stream3.frame000010.rgb48.pt  nasa_13013_hdr.mp4.stream0.frame000000.pt  nasa_13013_hdr.mp4.stream0.frame000000.rgb48.pt  nasa_13013_hdr.mp4.stream0.frame000005.pt  nasa_13013_hdr.mp4.stream0.frame000005.rgb48.pt  nasa_13013_hdr.mp4.stream0.frame000010.pt  nasa_13013_hdr.mp4.stream0.frame000010.rgb48.pt  nasa_13013_rotated.mp4.stream0.all_frames_info.json  rgba.avif  rgba.heic  sine_16ch_fltp.ogg.stream0.all_frames_info.json  sine_16ch_s16.wav.stream0.all_frames_info.json  test_non_zero_start.mp4.stream0.all_frames_info.json  testsrc2.mp4.stream0.all_frames_info.json  testsrc2_12bit_hdr.mp4.stream0.frame000000.pt  testsrc2_12bit_hdr.mp4.stream0.frame000000.rgb48.pt  testsrc2_12bit_hdr.mp4.stream0.frame000005.pt  testsrc2_12bit_hdr.mp4.stream0.frame000005.rgb48.pt  testsrc2_12bit_hdr.mp4.stream0.frame000010.pt  testsrc2_12bit_hdr.mp4.stream0.frame000010.rgb48.pt  testsrc2_hdr.mp4.stream0.frame000000.pt  (+5 more)
test/third-party-interface/: CMakeLists.txt  ThirdPartyInterfaceTest.cpp  test_third_party_interface.py
(+820 files in other folders)
